lintian (2.5.28) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * checks/description.pm:
    + [SL] show the actual description when it is too short.
  * checks/patch-systems.pm:
    + [NT] Rewrite using index rather than debfiles to analyse
      the package.  A side-effect of that means that Lintian
      can now check patches stored in the upstream part of the
      packages.  (Closes: #563773)
  * checks/po-debconf.pm:
    + [NT] Avoid writing test.pot to the unpacked package.
      (Closes: #699022)

  * data/cruft/non-free-license:
    + [BR] Detect cc-by-nc-sa license.  (Closes:  #749768).

  * debian/dirs:
    + [NT] Stop installing /var/spool/lintian
  * debian/lintian.install:
    + [NT] Install Lintian::Tutorial POD documents into
      /usr/share/perl5.  (Closes: #761930)
  * debian/postinst:
    + [NT] Remove empty Lintian labs in /var/spool/lintian on
      upgrade.
  * debian/postrm:
    + [NT] Remove the "changes" folder when purging the
      Lintian lab in /var/spool/lintian.

  * doc/tutorial/Lintian/Tutorial/WritingChecks.pod:
    + [NT] Mention "safe_qx" as alternative to qx/`` in the
      tutorial.

  * lib/Lintian/Command.pm:
    + [NT] Add support for running a sub in the child before
      it calls exec.
    + [NT] Add support for shell-like (e.g. &2) redirects of
      stdout and stderr.
    + [NT] Add safe_qx sub for replacing qx() that supports
      most of the features of spawn().
  * lib/Lintian/Path.pm:
    + [NT] Add support for fetching and (where it makes sense)
      opening the underlying file system object.  It also adds
      a few minor safety guards to common issues with symlinks.
      (Closes: #698930)

  * reporting/*:
    + [NT] Avoid forking a shell when invoking commands.  This
      has the side effect of allowing some paths from the
      configuration to contain spaces (among other), where it
      previously would not work.
