@@ -2,6 +2,8 @@ lintian (2.5.28) UNRELEASED; urgency=medium
 
   XXX: generate tag summary with private/generate-tag-summary
 
+  * checks/*:
+    + [NT] Remove all uses of "debfiles".
   * checks/description.pm:
     + [SL] show the actual description when it is too short.
   * checks/patch-systems.pm:
@@ -32,6 +34,12 @@ lintian (2.5.28) UNRELEASED; urgency=medium
     + [NT] Mention "safe_qx" as alternative to qx/`` in the
       tutorial.
 
+  * lib/Lintian/Collect{,/*}.pm:
+    + [NT] Deprecate the use of "debfiles".  Consumers are
+      recommended to use index_resolved_path instead.
+    + [NT] Remove all uses of debfiles (both the method and
+      the collection).  All methods (except "debfiles") now
+      depend on "unpacked" instead.
   * lib/Lintian/Command.pm:
     + [NT] Add support for running a sub in the child before
       it calls exec.
